examples/test/testpolicy3275.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3275
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key26: value3
      key12: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value12
          key24: value20
      podSelector:
        matchLabels:
          key21: value46
          key18: value35
